# Research-AI-Agent-

./: .env.dev  .gitignore  README.md  config.py  daily_paper.json  graph.py  implementation_plan.md  main.py  pyproject.toml  requirements.txt  setup_notion_db.py  state.py
.github/workflows/: daily-job.yml
assembler/: result_assembler.py
classifiers/: llm_classifier.py
converters/: pymupdf_converter.py
extractors/: methods_extractor.py  title_extractor.py
nodes/: node_assemble.py  node_classify_sections.py  node_extract_limitations.py  node_extract_methods.py  node_extract_summary.py  node_extract_title.py  node_notion_write.py  node_pdf_to_markdown.py  node_split_sections.py
sinks/: notion_sink.py
splitters/: heading_splitter.py
src/analysis/: config.py  graph.py  interfaces.py  schemas.py  state.py
src/analysis/assembler/: result_assembler.py
src/analysis/classifiers/: llm_classifier.py
src/analysis/extractors/: experiments_extractor.py  limitations_extractor.py  methods_extractor.py  summary_extractor.py
src/analysis/nodes/: node_assemble.py  node_classify_sections.py  node_extract_experiments.py  node_extract_limitations.py  node_extract_methods.py  node_extract_summary.py  node_extract_title.py  (+3 more)
src/core/: config.py  db.py  scheduler.py
src/notifications/: services.py
src/papers/: controllers.py  schemas.py  services.py
src/reading/: controllers.py  models.py  repository.py  schemas.py
src/users/: controllers.py  models.py  repository.py  schemas.py
tests/: test_assembler.py  test_classifier.py  test_extractors.py  test_splitter.py
(+2 files in other folders)
