[project]
name = "research-ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "langgraph",
    "langchain-openai",
    "langchain-huggingface",
    "huggingface_hub",
    "pymupdf4llm",
    "notion-client",
    "pydantic",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.11.3",
]
